Full last stage rerun complete

--- a/dmu28/dmu28_HDF-N/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_HDF-N/CIGALE_catalogue_preparation.ipynb
@@ -73,8 +73,9 @@
    "source": [
     "good = {}\n",
     "for band in ['spire_250', 'spire_350', 'spire_500']:\n",
-    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "                                   ~master_catalogue['flag_{}'.format(band)])\n",
+    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)])  \n",
+    "                                   #& ~master_catalogue['flag_{}'.format(band)])\n",
+    ")\n",
     "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
     "                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
