--- a/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
@@ -23,9 +23,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
+      "017bb1e (Mon Jun 18 14:58:59 2018 +0100) [with local modifications]\n",
       "This notebook was executed on: \n",
-      "2019-11-06 12:44:59.991576\n"
+      "2020-10-27 16:28:38.095407\n"
      ]
     }
    ],
@@ -633,18 +633,7 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column cigale_chi2_opt has missing data\n",
-      "Column cigale_chi2_ir has missing data\n",
-      "Column cigale_chi2_red has missing data\n",
-      "Column cigale_chi2_ironly has missing data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if MAKE_FINAL:\n",
     "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
@@ -669,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
