--- a/dmu32/dmu32_HDF-N/HDF-N_catalogue_merging.ipynb
+++ b/dmu32/dmu32_HDF-N/HDF-N_catalogue_merging.ipynb
@@ -575,7 +575,7 @@
     "if MAKE_FINAL:\n",
     "\n",
     "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
-    "    merged_table[columns].write(\"data/HDF-N.fits\")"
+    "    merged_table[columns].write(\"data/HDF-N.fits\".format(SUFFIX))"
    ]
   }
  ],
@@ -596,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
