--- a/dmu32/dmu32_SA13/SA13_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SA13/SA13_catalogue_merging.ipynb
@@ -557,7 +557,7 @@
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
-    "    merged_table[columns].write(\"data/SA13.fits\")"
+    "    merged_table[columns].write(\"data/SA13_{}.fits\".format(SUFFIX),overwrite=True)"
    ]
   }
  ],
