--- a/dmu32/dmu32_SPIRE-NEP/SPIRE-NEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SPIRE-NEP/SPIRE-NEP_catalogue_merging.ipynb
@@ -364,7 +364,7 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_gpc1_y_ap', 'flag_gpc1_z_ap', 'flag_gpc1_g_ap', 'flag_gpc1_r_ap', 'flag_gpc1_i_ap'}\n",
+      "{'flag_gpc1_g_ap', 'flag_gpc1_z_ap', 'flag_gpc1_y_ap', 'flag_gpc1_i_ap', 'flag_gpc1_r_ap'}\n",
       "Column flag_gpc1_g_ap has missing data\n",
       "Column flag_gpc1_r_ap has missing data\n",
       "Column flag_gpc1_i_ap has missing data\n",
@@ -565,7 +565,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'flag_gpc1_y_ap', 'flag_gpc1_g_ap', 'flag_gpc1_z_ap', 'flag_gpc1_r_ap', 'flag_gpc1_i_ap'}\n",
+      "{'flag_gpc1_g_ap', 'flag_gpc1_z_ap', 'flag_gpc1_y_ap', 'flag_gpc1_i_ap', 'flag_gpc1_r_ap'}\n",
       "set()\n"
      ]
     }
@@ -595,7 +595,7 @@
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
-    "    merged_table[columns].write(\"data/SPIRE-NEP.fits\")"
+    "    merged_table[columns].write(\"data/SPIRE-NEP_{}.fits\".format(SUFFIX),overwrite=True)"
    ]
   }
  ],
