--- a/dmu32/dmu32_XMM-13hr/XMM-13hr_catalogue_merging.ipynb
+++ b/dmu32/dmu32_XMM-13hr/XMM-13hr_catalogue_merging.ipynb
@@ -556,7 +556,7 @@
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
-    "    merged_table[columns].write(\"data/XMM-13hr.fits\")"
+    "    merged_table[columns].write(\"data/XMM-13hr_{}.fits\".format(SUFFIX),overwrite=True)"
    ]
   }
  ],
@@ -577,7 +577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
