--- a/dmu32/dmu32_xFLS/xFLS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_xFLS/xFLS_catalogue_merging.ipynb
@@ -368,7 +368,7 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_irac_i3_ap', 'flag_irac_i4_ap', 'flag_irac_i2_ap', 'flag_irac_i1_ap'}\n"
+      "{'flag_irac_i1_ap', 'flag_irac_i4_ap', 'flag_irac_i3_ap', 'flag_irac_i2_ap'}\n"
      ]
     },
     {
@@ -571,7 +571,7 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_irac_i3_ap', 'flag_irac_i4_ap', 'flag_irac_i2_ap', 'flag_irac_i1_ap'}\n"
+      "{'flag_irac_i1_ap', 'flag_irac_i4_ap', 'flag_irac_i3_ap', 'flag_irac_i2_ap'}\n"
      ]
     }
    ],
@@ -612,7 +612,7 @@
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
-    "    merged_table[columns].write(\"data/xFLS.fits\")"
+    "    merged_table[columns].write(\"data/xFLS_{}.fits\".format(SUFFIX),overwrite=True)"
    ]
   }
  ],
@@ -633,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
