--- a/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
@@ -215,7 +215,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "/opt/pyenv/versions/3.7.2/lib/python3.7/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
       "  return getattr(self.data, op)(other)\n"
      ]
     }
@@ -374,7 +374,11 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_irac_i2_ap', 'flag_irac_i1_ap', 'flag_irac_i4_ap', 'flag_irac_i3_ap'}\n"
+      "{'flag_irac_i2_ap', 'flag_irac_i1_ap', 'flag_irac_i4_ap', 'flag_irac_i3_ap'}\n",
+      "Column flag_irac_i1_ap has missing data\n",
+      "Column flag_irac_i2_ap has missing data\n",
+      "Column flag_irac_i3_ap has missing data\n",
+      "Column flag_irac_i4_ap has missing data\n"
      ]
     }
    ],
@@ -592,7 +596,18 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column flag_irac_i1_ap has missing data\n",
+      "Column flag_irac_i2_ap has missing data\n",
+      "Column flag_irac_i3_ap has missing data\n",
+      "Column flag_irac_i4_ap has missing data\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
@@ -617,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
