--- a/dmu32/dmu32_ELAIS-S1/ELAIS-S1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-S1/ELAIS-S1_catalogue_merging.ipynb
@@ -23,9 +23,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "708e28f (Tue May 8 18:05:21 2018 +0100)\n",
+      "017bb1e (Mon Jun 18 14:58:59 2018 +0100) [with local modifications]\n",
       "This notebook was executed on: \n",
-      "2018-06-01 11:56:28.856433\n"
+      "2020-10-28 01:35:39.363250\n"
      ]
     }
    ],
@@ -243,7 +243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "/opt/pyenv/versions/3.7.2/lib/python3.7/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
       "  return getattr(self.data, op)(other)\n"
      ]
     }
@@ -438,7 +438,7 @@
     "if MAKE_FINAL_CAT:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_ELAIS-S1/data/best/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_ELAIS-S1/data/zphot/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -622,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
