--- a/dmu32/dmu32_GAMA-09/GAMA-09_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-09/GAMA-09_catalogue_merging.ipynb
@@ -21,9 +21,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
+      "017bb1e (Mon Jun 18 14:58:59 2018 +0100) [with local modifications]\n",
       "This notebook was executed on: \n",
-      "2020-02-18 15:40:42.478501\n"
+      "2020-10-28 01:40:23.511258\n"
      ]
     }
    ],
@@ -604,18 +604,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column cigale_chi2_opt has missing data\n",
-      "Column cigale_chi2_ir has missing data\n",
-      "Column cigale_chi2_red has missing data\n",
-      "Column cigale_chi2_ironly has missing data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
@@ -641,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
