Duplicates in CIGALE output - removing them

--- a/dmu32/dmu32_AllSky/1_Make_All_Sky_A-list.ipynb
+++ b/dmu32/dmu32_AllSky/1_Make_All_Sky_A-list.ipynb
@@ -23,7 +23,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "1407877 (Mon Feb 4 12:56:29 2019 +0000)\n",
       "This notebook was executed on: \n",
-      "2020-10-29 21:16:42.848508\n"
+      "2020-10-29 21:27:47.400617\n"
      ]
     }
    ],
@@ -122,26 +122,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['../dmu32_AKARI-NEP/meta_main.yml']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "meta_files[16:17]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -219,6 +199,7 @@
     "        try:\n",
     "            table.remove_column(c)\n",
     "        except:\n",
+    "            continue\n",
     "            #print('Column {} cannot be removed it is not there'.format(c))\n",
     "            \n",
     "            \n",
@@ -236,21 +217,7 @@
      "output_type": "stream",
      "text": [
       "../../dmu32/dmu32_AKARI-NEP/data/AKARI-NEP_20180215.fits\n",
-      "Field AKARI-NEP has duplicates\n",
-      "Removing  {'m_ap_gpc1_g', 'ferr_megacam_u', 'm_megacam_i', 'f_gpc1_z', 'ferr_megacam_g', 'f_wircam_ks', 'f_ap_gpc1_r', 'f_wircam_y', 'm_ap_irac_i1', 'ferr_gpc1_i', 'ferr_ap_irac_i1', 'ferr_ap_gpc1_i', 'f_ap_irac_i2', 'ferr_wircam_ks', 'flag_wircam_ks', 'merr_gpc1_y', 'merr_ap_gpc1_z', 'm_megacam_z', 'm_gpc1_i', 'merr_ap_gpc1_i', 'merr_ap_gpc1_r', 'm_gpc1_y', 'merr_ap_irac_i1', 'merr_megacam_r', 'f_megacam_g', 'ferr_gpc1_g', 'f_megacam_u', 'ferr_gpc1_r', 'flag_gpc1_g', 'ferr_megacam_r', 'ferr_megacam_i', 'flag_megacam_r', 'ferr_megacam_z', 'm_megacam_g', 'flag_gpc1_r', 'flag_megacam_z', 'm_gpc1_z', 'm_ap_irac_i2', 'ferr_ap_gpc1_z', 'merr_megacam_u', 'flag_ap_gpc1_z', 'f_gpc1_i', 'merr_wircam_j', 'f_megacam_r', 'f_gpc1_y', 'm_megacam_u', 'merr_gpc1_z', 'f_megacam_z', 'flag_gpc1_y', 'm_gpc1_g', 'merr_wircam_y', 'm_ap_gpc1_i', 'f_ap_gpc1_i', 'm_wircam_j', 'f_gpc1_r', 'm_wircam_ks', 'merr_gpc1_i', 'flag_gpc1_z', 'flag_megacam_i', 'flag_ap_gpc1_r', 'm_megacam_r', 'flag_ap_gpc1_i', 'flag_ap_gpc1_y', 'm_wircam_y', 'f_ap_gpc1_z', 'f_ap_gpc1_y', 'm_ap_gpc1_z', 'merr_megacam_z', 'ferr_ap_gpc1_y', 'flag_megacam_u', 'ferr_ap_gpc1_r', 'f_ap_gpc1_g', 'ferr_wircam_j', 'f_wircam_j', 'm_ap_gpc1_y', 'merr_ap_gpc1_y', 'flag_wircam_j', 'ferr_gpc1_y', 'merr_megacam_i', 'ferr_gpc1_z', 'merr_gpc1_g', 'f_gpc1_g', 'ferr_ap_irac_i2', 'merr_wircam_ks', 'm_ap_gpc1_r', 'merr_gpc1_r', 'merr_ap_gpc1_g', 'merr_ap_irac_i2', 'ferr_wircam_y', 'f_megacam_i', 'm_gpc1_r', 'merr_megacam_g', 'flag_wircam_y', 'flag_gpc1_i', 'flag_ap_gpc1_g', 'f_ap_irac_i1', 'flag_megacam_g', 'ferr_ap_gpc1_g'}\n",
-      "Column flag_wircam_ks cannot be removed it is not there\n",
-      "Column flag_megacam_r cannot be removed it is not there\n",
-      "Column flag_megacam_z cannot be removed it is not there\n",
-      "Column flag_ap_gpc1_z cannot be removed it is not there\n",
-      "Column flag_megacam_i cannot be removed it is not there\n",
-      "Column flag_ap_gpc1_r cannot be removed it is not there\n",
-      "Column flag_ap_gpc1_i cannot be removed it is not there\n",
-      "Column flag_ap_gpc1_y cannot be removed it is not there\n",
-      "Column flag_megacam_u cannot be removed it is not there\n",
-      "Column flag_wircam_j cannot be removed it is not there\n",
-      "Column flag_wircam_y cannot be removed it is not there\n",
-      "Column flag_ap_gpc1_g cannot be removed it is not there\n",
-      "Column flag_megacam_g cannot be removed it is not there\n"
+      "Field AKARI-NEP has duplicates... removing them!\n"
      ]
     }
    ],
@@ -269,6 +236,7 @@
     "        continue\n",
     "        \n",
     "    #remove duplicates - this problem will be fixed upstream in dmu2 merging but this is a quick hack\n",
+    "    final_cat.sort('help_id')\n",
     "    is_duplicate = final_cat['help_id'][1:] == final_cat['help_id'][:-1]\n",
     "    if np.sum(is_duplicate)>0:\n",
     "        print('Field {} has duplicates... removing them!'.format(meta['field']))\n",
@@ -324,7 +292,7 @@
      "data": {
       "text/html": [
        "<i>Table length=5</i>\n",
-       "<table id=\"table4908772656\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4780550912\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>help_id</th><th>field</th><th>ra</th><th>dec</th><th>hp_idx</th><th>ebv</th><th>redshift</th><th>zspec</th><th>f_irac_i1</th><th>ferr_irac_i1</th><th>m_irac_i1</th><th>merr_irac_i1</th><th>flag_irac_i1</th><th>f_irac_i2</th><th>ferr_irac_i2</th><th>m_irac_i2</th><th>merr_irac_i2</th><th>flag_irac_i2</th><th>f_mips_24</th><th>ferr_mips_24</th><th>flag_mips_24</th><th>f_pacs_green</th><th>ferr_pacs_green</th><th>f_pacs_red</th><th>ferr_pacs_red</th><th>f_spire_250</th><th>ferr_spire_250</th><th>flag_spire_250</th><th>f_spire_350</th><th>ferr_spire_350</th><th>flag_spire_350</th><th>f_spire_500</th><th>ferr_spire_500</th><th>flag_spire_500</th><th>cigale_mstar</th><th>cigale_mstar_err</th><th>cigale_sfr</th><th>cigale_sfr_err</th><th>cigale_dustlumin</th><th>cigale_dustlumin_err</th><th>cigale_dustlumin_ironly</th><th>cigale_dustlumin_ironly_err</th><th>cigale_chi2_opt</th><th>cigale_chi2_ir</th><th>cigale_chi2_red</th><th>cigale_chi2_ironly</th><th>stellarity</th><th>stellarity_origin</th><th>flag_cleaned</th><th>flag_merged</th><th>flag_gaia</th><th>flag_optnir_obs</th><th>flag_optnir_det</th><th>zspec_qual</th><th>zspec_association_flag</th><th>f_best_u</th><th>ferr_best_u</th><th>m_best_u</th><th>merr_best_u</th><th>flag_best_u</th><th>f_best_g</th><th>ferr_best_g</th><th>m_best_g</th><th>merr_best_g</th><th>flag_best_g</th><th>f_best_r</th><th>ferr_best_r</th><th>m_best_r</th><th>merr_best_r</th><th>flag_best_r</th><th>f_best_i</th><th>ferr_best_i</th><th>m_best_i</th><th>merr_best_i</th><th>flag_best_i</th><th>f_best_z</th><th>ferr_best_z</th><th>m_best_z</th><th>merr_best_z</th><th>flag_best_z</th><th>f_best_y</th><th>ferr_best_y</th><th>m_best_y</th><th>merr_best_y</th><th>flag_best_y</th><th>f_best_j</th><th>ferr_best_j</th><th>m_best_j</th><th>merr_best_j</th><th>flag_best_j</th><th>f_best_h</th><th>ferr_best_h</th><th>m_best_h</th><th>merr_best_h</th><th>flag_best_h</th><th>f_best_k</th><th>ferr_best_k</th><th>m_best_k</th><th>merr_best_k</th><th>flag_best_k</th><th>f_best_ks</th><th>ferr_best_ks</th><th>m_best_ks</th><th>merr_best_ks</th><th>flag_best_ks</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th></th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th></th><th>uJy</th><th>uJy</th><th></th><th>uJy</th><th>uJy</th><th></th><th>solMass</th><th>solMass</th><th>solMass / yr</th><th>solMass / yr</th><th>W</th><th>W</th><th>W</th><th>W</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>bytes18</th><th>float64</th><th>float64</th><th>int64</th><th>float64</th><th>float32</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>float32</th><th>float32</th><th>bool</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>float32</th><th>float32</th><th>bool</th><th>float32</th><th>float32</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float32</th><th>bytes20</th><th>bool</th><th>bool</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th></tr></thead>\n",
@@ -359,27 +327,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "31441"
+       "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(len(full_cat),len(np.unique(full_cat['help_id']))"
+    "len(full_cat) == len(np.unique(full_cat['help_id']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +356,7 @@
        "105"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +480,7 @@
        " 'flag_best_ks']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,14 +491,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>Table masked=True length=5</i>\n",
-       "<table id=\"table4908844984\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4780795160\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>help_id</th><th>best_u</th><th>best_g</th><th>best_r</th><th>best_i</th><th>best_z</th><th>best_y</th><th>best_j</th><th>best_h</th><th>best_k</th><th>best_ks</th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>str18</th><th>str18</th><th>str18</th><th>str18</th><th>str18</th><th>str18</th><th>str18</th><th>str18</th><th>str18</th><th>str18</th></tr></thead>\n",
        "<tr><td>HELP_J174000.912+670032.127</td><td>band_not_available</td><td>gpc1_g</td><td>gpc1_r</td><td>gpc1_i</td><td>gpc1_z</td><td>gpc1_y</td><td>band_not_available</td><td>band_not_available</td><td>band_not_available</td><td>band_not_available</td></tr>\n",
@@ -552,7 +520,7 @@
        "HELP_J174003.386+670032.139 band_not_available ... band_not_available"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -603,6 +571,13 @@
     "#full_sources.write('./data/HELP_all_sky_xid_objects_sources_{}.fits'.format(SUFFIX), overwrite=True)\n",
     "#full_sources.write('./data/HELP_all_sky_xid_objects_sources_{}.csv'.format(SUFFIX), overwrite=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
