Remove CIGALE duplicates

--- a/dmu32/dmu32_ELAIS-N2/ELAIS-N2_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N2/ELAIS-N2_catalogue_merging.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
-    "MAKE_CIGALE_INPUT = True\n",
+    "MAKE_CIGALE_INPUT = False\n",
     "MAKE_FINAL_CAT = True\n",
     "\n",
     "SUFFIX = '20180218'"
@@ -469,6 +469,13 @@
     "    # Cigale outputs\n",
     "    cigale = Table.read(\"../../dmu28/dmu28_ELAIS-N2/data/zphot/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
+    "    \n",
+    "    #remove duplicates - this problem will be fixed upstream in dmu2 merging but this is a quick hack\n",
+    "    cigale.sort('help_id')\n",
+    "    is_duplicate = cigale['help_id'][1:] == cigale['help_id'][:-1]\n",
+    "    if np.sum(is_duplicate)>0:\n",
+    "        print('Field has CIGALE duplicates... removing them!')\n",
+    "    cigale = cigale[~np.append(is_duplicate,False)]\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
     "    # UPDATE - we no longer do this and instead provide the chi2 values \n",
@@ -625,7 +632,7 @@
     "if MAKE_FINAL_CAT:\n",
     "\n",
     "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
-    "    merged_table[columns].write(\"data/ELAIS-N2.fits\", overwrite=True)"
+    "    merged_table[columns].write(\"data/ELAIS-N2.fits_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
@@ -646,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
