--- a/dmu32/dmu32_ELAIS-S1/ELAIS-S1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-S1/ELAIS-S1_catalogue_merging.ipynb
@@ -440,6 +440,13 @@
     "    # Cigale outputs\n",
     "    cigale = Table.read(\"../../dmu28/dmu28_ELAIS-S1/data/zphot/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
+    "    \n",
+    "    #remove duplicates - this problem will be fixed upstream in dmu2 merging but this is a quick hack\n",
+    "    cigale.sort('help_id')\n",
+    "    is_duplicate = cigale['help_id'][1:] == cigale['help_id'][:-1]\n",
+    "    if np.sum(is_duplicate)>0:\n",
+    "        print('Field has CIGALE duplicates... removing them!')\n",
+    "    cigale = cigale[~np.append(is_duplicate,False)]\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
     "    # UPDATE - we no longer do this and instead provide the chi2 values \n",
@@ -622,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
