--- a/dmu32/dmu32_HDF-N/HDF-N_catalogue_merging.ipynb
+++ b/dmu32/dmu32_HDF-N/HDF-N_catalogue_merging.ipynb
@@ -419,6 +419,13 @@
     "    # Cigale outputs\n",
     "    cigale = Table.read(\"../../dmu28/dmu28_HDF-N/data/zphot/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
+    "    \n",
+    "    #remove duplicates - this problem will be fixed upstream in dmu2 merging but this is a quick hack\n",
+    "    cigale.sort('help_id')\n",
+    "    is_duplicate = cigale['help_id'][1:] == cigale['help_id'][:-1]\n",
+    "    if np.sum(is_duplicate)>0:\n",
+    "        print('Field has CIGALE duplicates... removing them!')\n",
+    "    cigale = cigale[~np.append(is_duplicate,False)]\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
     "    # UPDATE - we no longer do this and instead provide the chi2 values \n",
@@ -575,7 +582,7 @@
     "if MAKE_FINAL:\n",
     "\n",
     "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
-    "    merged_table[columns].write(\"data/HDF-N.fits\".format(SUFFIX))"
+    "    merged_table[columns].write(\"data/HDF-N_{}.fits\".format(SUFFIX))"
    ]
   }
  ],
@@ -596,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
