--- a/dmu32/dmu32_XMM-13hr/XMM-13hr_catalogue_merging.ipynb
+++ b/dmu32/dmu32_XMM-13hr/XMM-13hr_catalogue_merging.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
-    "MAKE_CIGALE = True\n",
+    "MAKE_CIGALE = False\n",
     "MAKE_FINAL = True\n",
     "\n",
     "SUFFIX = '20180501'"
@@ -391,6 +391,13 @@
     "    # Cigale outputs\n",
     "    cigale = Table.read(\"../../dmu28/dmu28_XMM-13hr/data/zphot/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
+    "    \n",
+    "    #remove duplicates - this problem will be fixed upstream in dmu2 merging but this is a quick hack\n",
+    "    cigale.sort('help_id')\n",
+    "    is_duplicate = cigale['help_id'][1:] == cigale['help_id'][:-1]\n",
+    "    if np.sum(is_duplicate)>0:\n",
+    "        print('Field has CIGALE duplicates... removing them!')\n",
+    "    cigale = cigale[~np.append(is_duplicate,False)]\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
     "    # UPDATE - we no longer do this and instead provide the chi2 values \n",
@@ -577,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
