Shell script to run all fields final stage

--- a/dmu32/3_The_end.ipynb
+++ b/dmu32/3_The_end.ipynb
@@ -215,7 +215,7 @@
     "        final_data.write(stilts_command.format(\n",
     "            in_file=final_help_product, \n",
     "            GAVO_FOLDER=GAVO_FOLDER, \n",
-    "            out_file='herschelhelp/main/{}.csv \\n'.format(\n",
+    "            out_file='herschelhelp/main/{} \\n'.format(\n",
     "                final_help_product.split('/')[-1].replace('.fits', '.csv')\n",
     "            )\n",
     "        ))\n",
@@ -283,7 +283,7 @@
     "        depths_to_vo.write(stilts_command.format(\n",
     "            in_file=final_depth_product, \n",
     "            GAVO_FOLDER=GAVO_FOLDER, \n",
-    "            out_file='depth/{}.csv \\n'.format(final_depth_product.split('/')[-1].replace('.fits', '.csv'))\n",
+    "            out_file='depth/{} \\n'.format(final_depth_product.split('/')[-1].replace('.fits', '.csv'))\n",
     "        ))\n",
     "\n",
     "        \n",
