Run all sky with just priors

--- a/dmu32/dmu32_AllSky/1_Make_All_Sky_A-list.ipynb
+++ b/dmu32/dmu32_AllSky/1_Make_All_Sky_A-list.ipynb
@@ -56,7 +56,9 @@
     "import numpy as np\n",
     "from herschelhelp_internal.utils import add_column_meta\n",
     "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"%Y%m%d\"))\n",
-    "print(SUFFIX)"
+    "print(SUFFIX)\n",
+    "\n",
+    "MAKE_FULL = False"
    ]
   },
   {
@@ -235,6 +237,9 @@
     "    except:\n",
     "        continue\n",
     "        \n",
+    "    if not MAKE_FULL:\n",
+    "        final_cat = final_cat[final_cat['f_spire_500']>0]\n",
+    "        \n",
     "    #remove duplicates - this problem will be fixed upstream in dmu2 merging but this is a quick hack\n",
     "    final_cat.sort('help_id')\n",
     "    is_duplicate = final_cat['help_id'][1:] == final_cat['help_id'][:-1]\n",
@@ -256,8 +261,10 @@
     "    \n",
     "    \n",
     "    final_cat = remove_specific_bands(final_cat,always_keep)\n",
-    "    final_cat.write('./data/{}_best_phot_{}.fits'.format(meta['field'],SUFFIX), overwrite=True)\n",
-    "    final_cat = final_cat[final_cat['f_spire_500'] > 0.]\n",
+    "    \n",
+    "    if MAKE_FULL:\n",
+    "        final_cat.write('./data/{}_best_phot_{}.fits'.format(meta['field'],SUFFIX), overwrite=True)\n",
+    "        final_cat = final_cat[final_cat['f_spire_500'] > 0.]\n",
     "    full_cat = vstack([full_cat,final_cat])\n",
     "                                                           \n",
     "    sources.write('./data/{}_best_phot_sources_{}.fits'.format(meta['field'],SUFFIX), overwrite=True)                                                       \n",
